--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^5.0.1"
+django-environ = "^0.11.2"
+psycopg2-binary = "^2.9.9"
+bcrypt = "^4.1.2"
 
 
 [build-system]
