--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.1"
 django-environ = "^0.11.2"
 psycopg2-binary = "^2.9.9"
 bcrypt = "^4.1.2"
+django-rename-app = "^0.1.7"
 
 
 [build-system]
