--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-environ = "^0.11.2"
 psycopg2-binary = "^2.9.9"
 bcrypt = "^4.1.2"
 django-rename-app = "^0.1.7"
+requests = "^2.31.0"
 
 
 [build-system]
